--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -2,10 +2,11 @@ name: Docker
 
 on:
   push:
-    branches: [ main ]
+    # branches: [ main ]
     tags: [ 'v*' ]
   pull_request:
-    branches: [ main ]
+    # branches: [ main ]
+    tags: [ 'v*' ]
 
 env:
   REGISTRY: ghcr.io
