--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,18 @@
 name: CI
 
 on:
-  push:
-    branches: [ main ]
-  # pull_request:
-    # branches: [ main ]
+  workflow_dispatch:
+    inputs:
+      run_tests:
+        description: '是否运行测试'
+        required: false
+        default: true
+        type: boolean
+      build_all_platforms:
+        description: '是否构建所有平台'
+        required: false
+        default: true
+        type: boolean
 
 jobs:
   test:
@@ -57,6 +65,7 @@ jobs:
     name: 构建
     runs-on: ubuntu-latest
     needs: test
+    if: ${{ inputs.build_all_platforms == true }}
     steps:
     - name: 检出代码
       uses: actions/checkout@v4
