--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,11 +1,19 @@
 name: Docker
 
 on:
+  workflow_dispatch:
+    inputs:
+      push_to_registry:
+        description: '是否推送到容器注册表'
+        required: false
+        default: false
+        type: boolean
+      platforms:
+        description: '构建平台'
+        required: false
+        default: 'linux/amd64,linux/arm64'
+        type: string
   push:
-    # branches: [ main ]
-    tags: [ 'v*' ]
-  pull_request:
-    # branches: [ main ]
     tags: [ 'v*' ]
 
 env:
@@ -28,7 +36,7 @@ jobs:
       uses: docker/setup-buildx-action@v3
 
     - name: 登录到容器注册表
-      if: github.event_name != 'pull_request'
+      if: ${{ inputs.push_to_registry == true || github.event_name == 'push' }}
       uses: docker/login-action@v3
       with:
         registry: ${{ env.REGISTRY }}
@@ -52,8 +60,8 @@ jobs:
       uses: docker/build-push-action@v5
       with:
         context: .
-        platforms: linux/amd64,linux/arm64
-        push: ${{ github.event_name != 'pull_request' }}
+        platforms: ${{ inputs.platforms || 'linux/amd64,linux/arm64' }}
+        push: ${{ inputs.push_to_registry == true || github.event_name == 'push' }}
         tags: ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
         cache-from: type=gha
