--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -57,22 +57,22 @@ jobs:
           echo "## 变更内容" > CHANGELOG.md
           echo "" >> CHANGELOG.md
           git log --pretty=format:"- %s (%h)" $PREVIOUS_TAG..HEAD >> CHANGELOG.md
+        else
+          echo "## 首次发布" > CHANGELOG.md
+          echo "" >> CHANGELOG.md
+          echo "这是项目的首次发布版本。" >> CHANGELOG.md
         fi
         
-        # 直接设置变更日志output
-        {
-          echo 'changelog<<CHANGELOG_EOF'
-          cat CHANGELOG.md
-          echo 'CHANGELOG_EOF'
-        } >> $GITHUB_OUTPUT
+        # 将变更日志写入文件，供后续步骤使用
+        echo "变更日志已生成: CHANGELOG.md"
 
     - name: 创建 GitHub Release
       uses: softprops/action-gh-release@v1
       with:
         name: Release ${{ github.ref_name }}
-        body: ${{ steps.changelog.outputs.changelog }}
+        body_path: CHANGELOG.md
         files: |
-          dist/release/*.tar.gz
+          dist/release/*.zip
         draft: false
         prerelease: ${{ contains(github.ref_name, 'alpha') || contains(github.ref_name, 'beta') || contains(github.ref_name, 'rc') }}
       env:
